--- a/CH01_SparkDG.ipynb
+++ b/CH01_SparkDG.ipynb
@@ -143,55 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "071d21f1-1a88-4351-842d-a6c9762f5cba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Using incubator modules: jdk.incubator.vector\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "26/01/31 19:06:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - in-memory</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://192.168.1.5:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v4.1.1</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>SparkInJupyter</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x70c536890770>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -200,35 +155,45 @@
     "    .master(\"local[*]\") \\\n",
     "    .getOrCreate()\n",
     "\n",
-    "spark\n"
+    "spark\n",
+    "\n",
+    "\"\"\" Spark session configuration options:\n",
+    "\n",
+    "Memory and Resource Management\n",
+    "\n",
+    "These settings let you control memory allocation and CPU usage for Spark’s distributed processes:\n",
+    "\n",
+    "    Executor Memory (spark.executor.memory): Sets the memory allocation for each executor.\n",
+    "    Driver Memory (spark.driver.memory): Allocates memory for the driver.\n",
+    "    Core Allocation (spark.executor.cores): Specifies the number of CPU cores per executor.\n",
+    "\n",
+    "Shuffle and Storage Settings\n",
+    "\n",
+    "    Shuffle Partitions (spark.sql.shuffle.partitions): Configures the number of partitions for shuffle operations, often useful in joins and aggregations. \n",
+    "    Storage Level (spark.storage.level): Controls caching, enabling more efficient reuse of DataFrames. \n",
+    "\n",
+    "JDBC Connection and Database Configuration:\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Database App\") \\\n",
+    "    .config(\"spark.sql.sources.jdbc.url\", \"jdbc:postgresql://localhost:5432/mydb\") \\\n",
+    "    .config(\"spark.network.timeout\", \"120s\") \\\n",
+    "    .getOrCreate()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9abf54d2-c756-4547-8a00-45563f2bc813",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'getpwd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m myRange \u001b[38;5;241m=\u001b[39m spark\u001b[38;5;241m.\u001b[39mrange(\u001b[38;5;241m1000\u001b[39m)\u001b[38;5;241m.\u001b[39mtoDF(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnumber\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgetpwd\u001b[49m()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'getpwd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "myRange = spark.range(1000).toDF(\"number\")\n",
-    "getpwd()"
+    "myRange = spark.range(1000).toDF(\"number\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3bbd5854-a57d-438a-ac73-14b1f7534893",
    "metadata": {},
    "outputs": [],
@@ -242,43 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2a33225c-87b2-47dd-8a45-218273aed3ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "500\n",
-      "+------+\n",
-      "|number|\n",
-      "+------+\n",
-      "|     0|\n",
-      "|     1|\n",
-      "|     2|\n",
-      "|     3|\n",
-      "|     4|\n",
-      "|     5|\n",
-      "|     6|\n",
-      "|     7|\n",
-      "|     8|\n",
-      "|     9|\n",
-      "|    10|\n",
-      "|    11|\n",
-      "|    12|\n",
-      "|    13|\n",
-      "|    14|\n",
-      "|    15|\n",
-      "|    16|\n",
-      "|    17|\n",
-      "|    18|\n",
-      "|    19|\n",
-      "+------+\n",
-      "only showing top 20 rows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "divisBy2 = myRange.where(\"number % 2 = 0\")\n",
     "print(divisBy2.count())\n",
@@ -333,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collectDF=flightData2015.sort(\"count\").collect() # collects data to native programming interface data structure, since pyspark, brings everything from all teh executors to List.\n",
+    "collectDF=flightData2015.sort(\"count\").collect() # collects data to native programming interface data structure, since pyspark, brings everything from all the executors to List.\n",
     "# Chances are there that  spark crashes, because the driver node may have say 512MB of memory and data collected from all executors may be over 512MB, ion that case OOO will come and crashed."
    ]
   },
