--- a/CH02_SparkDG.ipynb
+++ b/CH02_SparkDG.ipynb
@@ -66,21 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0fbc785b-b5ef-4e7e-a62b-5b580160a0c6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StructType([StructField('DEST_COUNTRY_NAME', StringType(), True), StructField('ORIGIN_COUNTRY_NAME', StringType(), True), StructField('count', LongType(), True)])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read.format(\"json\").load(\"./SparkBasics/data/flight-data/json/2015-summary.json\")\n",
     "spark.read.format(\"json\").load(\"./SparkBasics/data/flight-data/json/2015-summary.json\").schema"
@@ -102,7 +91,7 @@
     "  StructField(\"count\", LongType(), False, metadata={\"hello\":\"world\"})\n",
     "])\n",
     "df = spark.read.format(\"json\").schema(myManualSchema)\\\n",
-    "  .load(\"./data/flight-data/json/2015-summary.json\")\n",
+    "   .load(\"./SparkBasics/data/flight-data/json/2015-summary.json\")\n",
     "df.show(1)\n"
    ]
   },
@@ -137,7 +126,7 @@
     "myRow[0]\n",
     "myRow[2]\n",
     "\n",
-    "df = spark.read.format(\"json\").load(\"./data/flight-data/json/2015-summary.json\")\n",
+    "df = spark.read.format(\"json\").load(\"./SparkBasics/data/flight-data/json/2015-summary.json\")\n",
     "df.createOrReplaceTempView(\"dfTable\")\n",
     "df.show(1)"
    ]
@@ -175,24 +164,19 @@
     "df.select(\"DEST_COUNTRY_NAME\", \"ORIGIN_COUNTRY_NAME\").show(2)\n",
     "\n",
     "from pyspark.sql.functions import expr, col, column\n",
-    "df.select(\n",
-    "    expr(\"DEST_COUNTRY_NAME\"),\n",
-    "    col(\"DEST_COUNTRY_NAME\"),\n",
-    "    column(\"DEST_COUNTRY_NAME\"))\\\n",
-    "  .show(2)\n",
+    "df.select(expr(\"DEST_COUNTRY_NAME\"),col(\"DEST_COUNTRY_NAME\"),column(\"DEST_COUNTRY_NAME\")).show(2)\n",
     "\n",
     "\n",
     "df.select(expr(\"DEST_COUNTRY_NAME AS destination\")).show(2)\n",
     "\n",
-    "df.select(expr(\"DEST_COUNTRY_NAME as destination\").alias(\"DEST_COUNTRY_NAME\"))\\\n",
-    "  .show(2)\n",
+    "df.select(expr(\"DEST_COUNTRY_NAME as destination\").alias(\"DEST_COUNTRY_NAME\")).show(2)\n",
+    "df.select(expr(\"'The '|| DEST_COUNTRY_NAME as `DEST CTY`\")).show(1)\n",
     "\n",
     "df.selectExpr(\"DEST_COUNTRY_NAME as newColumnName\", \"DEST_COUNTRY_NAME\").show(2)\n",
     "\n",
     "df.selectExpr(\n",
     "  \"*\", # all original columns\n",
-    "    \"(DEST_COUNTRY_NAME = ORIGIN_COUNTRY_NAME) as withinCountry\")\n",
-    "  .show(2)\n",
+    "    \"(DEST_COUNTRY_NAME = ORIGIN_COUNTRY_NAME) as withinCountry\").show(2)\n",
     "\n",
     "df.selectExpr(\"avg(count)\", \"count(distinct(DEST_COUNTRY_NAME))\").show(2)"
    ]
@@ -295,7 +279,7 @@
     "df.orderBy(expr(\"count desc\")).show(2)\n",
     "df.orderBy(col(\"count\").desc(), col(\"DEST_COUNTRY_NAME\").asc()).show(2)\n",
     "\n",
-    "spark.read.format(\"json\").load(\"./data/flight-data/json/*-summary.json\")\\\n",
+    "spark.read.format(\"json\").load(\"./SparkBasics/data/flight-data/json/*-summary.json\")\\\n",
     "  .sortWithinPartitions(\"count\")\n",
     "df.limit(5).show()\n",
     "df.orderBy(expr(\"count desc\")).limit(6).show()"
