--- a/CH01_SparkDG.ipynb
+++ b/CH01_SparkDG.ipynb
@@ -378,7 +378,14 @@
    "id": "cf3a08d1-9e93-4309-aef3-a21e879c64b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Case Sensitivity:\n",
+    "'''\n",
+    "By default Spark is case insensitive; however, you can make Spark case sensitive by setting the\n",
+    "configuration:\n",
+    "-- in SQL'''\n",
+    "set spark.sql.caseSensitive true"
+   ]
   }
  ],
  "metadata": {
